# SecondSemester_Labs

./: CMakeLists.txt  README.md  a.out  main.cpp
mymath/: CMakeLists.txt  mymath.cpp  mymath.h
mynumber/: CMakeLists.txt  mynumber.cpp  mynumber.h
